k8s/syncthing/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  labels:
    app: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
      - name: syncthing
        image: lscr.io/linuxserver/syncthing:latest
        ports:
        - containerPort: 8384
        - containerPort: 22000
          protocol: TCP
        - containerPort: 22000
          protocol: UDP
        - containerPort: 21027
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data1
          mountPath: /data1
        - name: data2
          mountPath: /data2
      volumes:
      - name: config
        hostPath:
          path: /path/to/syncthing/config
      - name: data1
        hostPath:
          path: /path/to/data1
      - name: data2
        hostPath:
          path: /path/to/data2
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-service
spec:
  type: NodePort
  selector:
    app: syncthing
  ports:
  - name: webui
    port: 8384
    targetPort: 8384
    nodePort: 30000
  - name: tcp-sync
    port: 22000
    targetPort: 22000
    protocol: TCP
    nodePort: 30001
  - name: udp-sync
    port: 22000
    targetPort: 22000
    protocol: UDP
    nodePort: 30002
  - name: discovery
    port: 21027
    protocol: UDP
    targetPort: 21027
    nodePort: 30003

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-ingress
  namespace: syncthing
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - syncthing.wayofdt.com
    secretName: secret-tls
  rules:
  - host: syncthing.wayofdt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: syncthing-service
            port:
              number: 8384
